[gd_scene load_steps=4 format=3 uid="uid://bpjm4uwq1in5o"]

[ext_resource type="Script" path="res://Assets/Scripts/Gameplay/DelayTimer.gd" id="1_muko0"]
[ext_resource type="AudioStream" uid="uid://c5fnd3vuhdpv2" path="res://Sounds/Timer/Timer_Ticking.ogg" id="2_drk4f"]
[ext_resource type="AudioStream" uid="uid://coc5nuqnrt6l5" path="res://Sounds/Timer/Timer_Ended.ogg" id="3_hy17u"]

[node name="DelayTimer" type="Timer"]
one_shot = true
script = ExtResource("1_muko0")

[node name="Sounds" type="Node3D" parent="."]

[node name="TickingSound" type="AudioStreamPlayer3D" parent="Sounds"]
stream = ExtResource("2_drk4f")
volume_db = -20.0
attenuation_filter_db = 0.0

[node name="EndedSound" type="AudioStreamPlayer3D" parent="Sounds"]
stream = ExtResource("3_hy17u")
volume_db = -20.0
attenuation_filter_db = 0.0

[connection signal="timeout" from="." to="." method="_on_timeout"]
